# Virtual_voice

./: .gitignore  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/drivers/vbcable/: THIRD_PARTY_NOTICE.txt
src-tauri/src/: driver.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
