[package]
name = "virtual-voice"
version = "1.5.0"
description = "Virtual Voice Client"
authors = ["you"]
edition = "2021"

[lib]
name = "virtual_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
cpal = "0.15"
zip = "2"
